Version 10.4.233 - 4 October 2007, by Pascal "Pixel" Rigaux

- use /dev/cdrom in fstab, but do not write corresponding udev rule
  (the rules will be generated at boot time otherwise it won't catch the
  hdX/srX switch)

Version 10.4.232 - 4 October 2007, by Olivier "blino" Blin

- add helper to get kernel module path (to be used in draklive)

Version 10.4.228 - 3 October 2007, by Pascal "Pixel" Rigaux

- use /dev/cdrom in fstab, and write corresponding udev rule
  (the rules were generated at boot time but here we ensure consistent naming)
- 2008 logo
- bootloader:
  o if there is a /boot, check /boot instead of "/" to allow grub or not

Version 10.4.227 - 2 October 2007, by Thierry Vignaud

- diskdrake:
  o improved wrapping of mount option descriptions (#19848)
- add ath5k module in wireless category

Version 10.4.224 - 1 October 2007, by Pascal "Pixel" Rigaux

- don't keep noarch pkgs symlinked (to ../../../i586/media/main/xxx.rpm)
  when copying packages on disk

Version 10.4.223 - 1 October 2007, by Pascal "Pixel" Rigaux

- diskdrake:
  o bugfix 10.4.162: allow "LVM" on RAID (#34359)
- add acpi-cpufreq support for some Intel CPUs (family 6 model 15)
  (from Herton Ronaldo Krzesinski, #30208)

Version 10.4.220 - 28 September 2007, by Pascal "Pixel" Rigaux

- log_sizes: cleanup __db* files
- ensure the rpmdb is closed

Version 10.4.218 - 28 September 2007, by Pascal "Pixel" Rigaux

- add /etc/rpm/macros.cdb

Version 10.4.217 - 27 September 2007, by Thierry Vignaud

- help:
  o do not segfault on #foobar like anchors
  o try translated links first (#33679)

Version 10.4.216 - 27 September 2007, by Pascal "Pixel" Rigaux

- allow to choose countries like "Angola" which have no locale (en_AO) in the
  "best" countries (alas it won't be remembered, will only be used in kde
  settings for now)

Version 10.4.215 - 26 September 2007, by Thierry Vignaud

- display nicer HTML release notes rather than raw text version
- fix using iso CD2 on disk (#33022):