@@ -1,3 +1,6 @@
+- fix configuring kdeglobals (was broken because of /etc/kderc using
+  udpate-alternatives which use absolute symlinks)
+
 Version 10.4.233 - 4 October 2007, by Pascal "Pixel" Rigaux
 
 - use /dev/cdrom in fstab, but do not write corresponding udev rule
